--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
+    <title>Bootstrap dashboard</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -15,6 +14,7 @@
 </head>
 
 <body>
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
@@ -39,9 +39,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Help </a>
                         </li>
+                        <li class="nav-item">
+
+                        </li>
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Cerca" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
+                    </form>
                 </div>
+
             </div>
+
         </nav>
 
     </header>
@@ -204,69 +213,61 @@
                             F.A.Q.
                         </div>
                         <div class="card-body">
-                        <div class="accordion" id="accordionExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                        Come aggiungere un nuovo libro?
-                                    </button>
-                                </h2>
-                                <div id="collapseOne" class="accordion-collapse collapse"
-                                    data-bs-parent="#accordionExample">
-                                    <div class="accordion-body">
-                                        <strong>This is the first item’s accordion body.</strong> It is shown by
-                                        default, until the collapse plugin adds the appropriate classes that we use
-                                        to style each element. These classes control the overall appearance, as well
-                                        as the showing and hiding via CSS transitions. You can modify any of this
-                                        with custom CSS or overriding our default variables. It’s also worth noting
-                                        that just about any HTML can go within the <code>.accordion-body</code>,
-                                        though the transition does limit overflow.
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseOne" aria-expanded="false"
+                                            aria-controls="collapseOne">
+                                            Come aggiungere un nuovo libro?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseOne" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <strong>Lorem ipsum dolor sit amet.</strong> Lorem ipsum dolor sit, amet
+                                            consectetur adipisicing elit. Possimus, sint quis qui illum repellat
+                                            provident modi neque quos, maiores error praesentium reprehenderit vitae
+                                            soluta corrupti voluptas est quam aspernatur quisquam.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                            aria-expanded="false" aria-controls="collapseTwo">
+                                            Come posso accedere all'anagrafica utenti?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseTwo" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus ipsum
+                                            cumque sequi a, architecto quos assumenda consectetur ullam fuga est
+                                            doloribus sed aperiam iure, facilis ducimus corrupti voluptatibus expedita.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
+                                            Posso usare questa dashboard da mobile?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus dolores
+                                            nobis rem, distinctio aperiam voluptatibus quis, inventore ad dolore
+                                            perferendis consequatur beatae quibusdam. Autem atque architecto obcaecati
+                                            quas reiciendis numquam.
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Come posso accedere all'anagrafica utenti?
-                                    </button>
-                                </h2>
-                                <div id="collapseTwo" class="accordion-collapse collapse"
-                                    data-bs-parent="#accordionExample">
-                                    <div class="accordion-body">
-                                        <strong>This is the second item’s accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use
-                                        to style each element. These classes control the overall appearance, as well
-                                        as the showing and hiding via CSS transitions. You can modify any of this
-                                        with custom CSS or overriding our default variables. It’s also worth noting
-                                        that just about any HTML can go within the <code>.accordion-body</code>,
-                                        though the transition does limit overflow.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseThree" aria-expanded="false"
-                                        aria-controls="collapseThree">
-                                        Posso usare questa dashboard da mobile?
-                                    </button>
-                                </h2>
-                                <div id="collapseThree" class="accordion-collapse collapse"
-                                    data-bs-parent="#accordionExample">
-                                    <div class="accordion-body">
-                                        <strong>This is the third item’s accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use
-                                        to style each element. These classes control the overall appearance, as well
-                                        as the showing and hiding via CSS transitions. You can modify any of this
-                                        with custom CSS or overriding our default variables. It’s also worth noting
-                                        that just about any HTML can go within the <code>.accordion-body</code>,
-                                        though the transition does limit overflow.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         </div>
                     </div>
                 </div>
@@ -278,9 +279,7 @@
 
 
     </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
