--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <title>Bootstrap dashboard</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
@@ -65,103 +65,103 @@
                         <thead>
                             <tr>
                                 <th scope="col">Titolo</th>
-                                <th scope="col" class="d-none d-md-block">Data prestito</th>
+                                <th scope="col" class="d-none d-md-table-cell">Data prestito</th>
                                 <th scope="col">Stato</th>
                                 <th scope="col">Azioni</th>
                             </tr>
                         </thead>
                         <tbody class="align-middle">
                             <tr>
-                                <td scope="row">I pilastri della terra</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I pilastri della terra</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I promessi sposi</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I promessi sposi</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">Il signore degli anelli</td>
-                                <td class="d-none d-md-block">18/10/2023</td>
+                                <td>Il signore degli anelli</td>
+                                <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I pilastri della terra</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I pilastri della terra</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I promessi sposi</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I promessi sposi</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">Il signore degli anelli</td>
-                                <td class="d-none d-md-block">18/10/2023</td>
+                                <td>Il signore degli anelli</td>
+                                <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I pilastri della terra</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I pilastri della terra</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I promessi sposi</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I promessi sposi</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">Il signore degli anelli</td>
-                                <td class="d-none d-md-block">18/10/2023</td>
+                                <td>Il signore degli anelli</td>
+                                <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I pilastri della terra</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I pilastri della terra</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">I promessi sposi</td>
-                                <td class="d-none d-md-block">-</td>
+                                <td>I promessi sposi</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td scope="row">Il signore degli anelli</td>
-                                <td class="d-none d-md-block">18/10/2023</td>
+                                <td>Il signore degli anelli</td>
+                                <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
