--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="assets/img/duck.png" alt="Duck logo" height="50"></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/duck.png" alt="Duck logo" height="50"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -58,9 +58,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-8 catalogo">
-                    <h1 class="mt-3">Catalogo libri <button type="button" class="btn btn-primary float-end">
+                    <h1 class="mt-3">Catalogo libri <a href="new_book.html"><button type="button" class="btn btn-primary float-end">
                             Aggiungi libro
-                        </button></h1>
+                        </button>
+                    </a></h1>
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -165,7 +166,7 @@
                 </div>
 
                 <div class="col-sm-12 col-lg-4">
-                    <div class="card">
+                    <div class="card mt-3">
                         <div class="card-header">
                             Todo
                         </div>
