--- a/new_book.html
+++ b/new_book.html
@@ -57,43 +57,78 @@
     </header>
     <main>
         <div class="container">
-            <form class="row g-3 needs-validation" novalidate>
-              <div class="col-md-6">
-                <label for="validationCustom01" class="form-label">Nome Autore</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="Inserisci il nome dell'autore" required>
-                <div class="valid-feedback">
-                  Looks good!
+            <h1 class="mt-4">Nuovo libro</h1>
+            <form class="row g-3 mt-3">
+                <div class="col-6">
+                    <label for="validationCustom01" class="form-label">Nome Autore</label>
+                    <input type="text" class="form-control" id="validationCustom01"
+                        placeholder="Inserisci il nome dell'autore" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <label for="validationCustom01" class="form-label">Cognome Autore</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="Inserisci il cognome dell'autore" required>
-                <div class="valid-feedback">
-                  Looks good!
+                <div class="col-6">
+                    <label for="validationCustom01" class="form-label">Cognome Autore</label>
+                    <input type="text" class="form-control" id="validationCustom01"
+                        placeholder="Inserisci il cognome dell'autore" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
-              </div>
-              <div class="col">
-                <label for="validationCustom03" class="form-label">Titolo</label>
-                <input type="text" class="form-control" id="validationCustom03" placeholder="Inserisci il titolo del libro" required>
-                <div class="valid-feedback">
-                  Titolo ok
+                <div class="col-12">
+                    <label for="validationCustom03" class="form-label">Titolo</label>
+                    <input type="text" class="form-control" id="validationCustom03"
+                        placeholder="Inserisci il titolo del libro" required>
+                    <div class="valid-feedback">
+                        Titolo ok
+                    </div>
+                    <p class="text-muted">Titolo versione italiana</p>
                 </div>
-              </div>
+                <div class="col-md-4">
+                    <label for="validationCustom04" class="form-label">Genere</label>
+                    <select class="form-select" aria-label="Genere">
+                        <option selected>Genre select</option>
+                        <option value="1">Fantasy</option>
+                        <option value="2">Horror</option>
+                        <option value="3">Clasic</option>
+                    </select>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustom05" class="form-label">Anno di pubblicazione</label>
+                    <input type="text" class="form-control" id="validationCustom05" placeholder="Inserisci l'anno"
+                        required>
+                    <div class="valid-feedback">
+                        Anno ok!
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustom06" class="form-label">ISBN &cross;</label>
+                    <input type="text" class="form-control" id="validationCustom06"
+                        placeholder="Inserisci il codice ISBN" required>
+                    <div class="valid-feedback">
+                        ISBN ok!
+                    </div>
+                </div>
+                <hr>
+                <div class="col-12">
 
-              <div class="col-12">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                  <label class="form-check-label" for="invalidCheck">
-                    Agree to terms and conditions
-                  </label>
-                  <div class="invalid-feedback">
-                    You must agree before submitting.
-                  </div>
+                    <label for="" class="form-label">Note</label>
+                    <textarea class="form-control" name="" id="" rows="3"
+                        placeholder="Inserisci eventuali note sul libro"></textarea>
+
+
                 </div>
-              </div>
-              <div class="col-12">
-                <button class="btn btn-primary" type="submit">Submit form</button>
-              </div>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="form-check-label" for="invalidCheck">
+                            Disponibile anche in digitale
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Aggiungi libro</button>
+                </div>
             </form>
 
         </div>
