--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control mr-sm-2" type="search" placeholder="Cerca" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Cerca</button>
                     </form>
                 </div>
 
