--- a/new_book.html
+++ b/new_book.html
@@ -46,7 +46,7 @@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control mr-sm-2" type="search" placeholder="Cerca" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
+                        <button class="btn btn-outline-light my-sm-0 m-2" type="submit">Cerca</button>
                     </form>
                 </div>
 
